--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,7 +40,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets<i class="fa-regular fa-pen-to-square"></i> </h2>
-		<button class="filters">Modifier</button>
+		<div class="filters">Filtres</div>
 		<div class="gallery">
 			
 		</div>
