suppression font-awesome

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -39,7 +39,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets<i class="fa-regular fa-pen-to-square"></i> </h2>
+		<h2>Mes Projets </h2>
 		<div class="filters">Filtres</div>
 		<div class="gallery">
 			
