--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,7 +40,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets </h2>
-		<div class="filters">Filtres</div>
+		<div class="filters"></div>
 		<div class="gallery">
 			
 		</div>
