--- a/FrontEnd/formulaire.html
+++ b/FrontEnd/formulaire.html
@@ -19,25 +19,23 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
+			<li><a href="./index.html">projets</a></li>
+			<li><a href="./index.html#contact">contact</a></li>
+			<li><a href="./formulaire.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
-	<section id="contact">
+	<section id="login">
 		<h2>Log in</h2>
-		<p>Vous avez un projet ? Discutons-en !</p>
 		<form action="#" method="post">
-			<label for="name">Nom</label>
-			<input type="text" name="name" id="name">
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email">
-			<label for="message">Message</label>
-			<textarea name="message" id="message" cols="30" rows="10"></textarea>
+			<label for="password">Mot de passe</label>
+			<input type="password" name="password" id="password">
 			<input type="submit" value="Se connecter">
+			<a href="#">Mot de passe oublié</a>
 		</form>
 	</section>
 </main>
