--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,7 +21,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a href="./formulaire.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
