ajout lien dans js

--- a/FrontEnd/formulaire.html
+++ b/FrontEnd/formulaire.html
@@ -35,7 +35,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 			<label for="password">Mot de passe</label>
 			<input type="password" name="password" id="password">
 			<input type="submit" value="Se connecter">
-			<a href="#">Mot de passe oublié</a>
+			<a href="#" class="password">Mot de passe oublié</a>
 		</form>
 	</section>
 </main>
