--- a/FrontEnd/index_edit.html
+++ b/FrontEnd/index_edit.html
@@ -44,10 +44,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     modifier
 </button></h2>
 		<div class="gallery"></div>
-	<!-- Gardez votre bouton Modifier existant -->
 
 
-<!-- Modale réelle -->
+<!-- Modale -->
 <div id="galleryModal" class="modal">
     <div class="modal-content">
         <div class="modal-header">
@@ -56,7 +55,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </div>
         <div class="modal-body">
             <div class="gallery-grid" id="modalGallery">
-                <!-- Les images de l'API viendront ici -->
             </div>
             <div class="modal-separator"></div>
             <button id="addPhotoBtn" class="btn-add-photo">Ajouter une photo</button>
