barre mode edition

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,6 +15,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+	<!-- Barre mode édition -->
+<div id="adminBar" class="admin-bar">
+    <div class="admin-content">
+        <i class="fas fa-edit edit-icon"></i>
+        <span>Mode édition</span>
+    </div>
+</div>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
